# moral-mechinterp

./: .gitignore  README.md  pyproject.toml
artifacts/patching_controls/: activation_patching_results.csv  activation_patching_summary.csv  clean_margins.csv  run_metadata.json
artifacts/patching_full_v9/: activation_patching_summary.csv  clean_margins.csv  run_metadata.json
configs/: eval.yaml
data/: README.md  example_gt_harmbench.jsonl
outputs/tables_full/: adapter_delta_heatmap_game_minus_base.csv  adapter_delta_heatmap_late_summary.csv  adapter_delta_heatmap_late_summary.md  adapter_delta_heatmap_ut_minus_base.csv  adapter_delta_late_layer_summary.csv  adapter_delta_late_layer_summary.md  disagreement_counts.csv  game_type_metrics.csv  late_layer_effect_summary_heatmap.csv  late_layer_effect_summary_heatmap.md  late_layer_representation_drift.csv  late_layer_representation_drift.md  logit_lens_late_layer_paper_table.csv  logit_lens_late_layer_paper_table.md  logit_lens_late_layer_separation.csv  overall_metrics.csv  paired_improvements.csv  random_control_late_layer_logit_lens.csv  random_control_late_layer_logit_lens.md  (+1 more)
scripts/: 03_logit_lens_margins.py  04_make_paper_figures.py  04_make_random_control_subsets.py  05_summarize_control_logit_lens.py  06_representation_drift.py  07_summarize_representation_drift.py  08_plot_adapter_delta_logit_lens.py  09_plot_adapter_delta_heatmap.py  10_plot_late_layer_effect_summary_heatmap.py  balance_ab_positions.py  convert_gtharmbench_csv.py  evaluate_behavior.py  run_activation_patching.py  summarize_behavior.py
(+82 files in other folders)
